@@ -22,6 +22,7 @@ Version 1.1.6 to be released
 - Enh #1836: The contact form model of the blog demo does now make use of CCaptcha::checkRequirements (Y!!)
 - Enh #1860: Changed the signature of CValidator::createValidator() to make it easier to use (Qiang)
 - Enh #1849: Updated Blueprint CSS to version 1.0 (sebas)
+- Enh #1872: Added $defaultUrl parameter to CWebUser::getReturnUrl() (Qiang)
 - Enh #1885: Added ipFilters to the Gii-created config file to reduce user confusion (Sam Dark, Steve Friedl)
 - Enh #1899: Added checkIntegrity and resetSequence for SQL Server (Qiang)
 - Enh #1929: Improved CActiveForm so that it can be used multiple times on the same page for the same type of data model (Qiang)
